[package]
name = "ssb-neon-ref"
version = "0.1.0"
authors = ["Andre Staltz <andre@staltz.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ssb_neon_ref"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.2"

[dependencies]
neon = "0.4.2"
ssb-multiformats = "0.2.1"
